--- a/재고관리자동화/placeorderAutomation/src/main/resources/templates/task-part-log.html
+++ b/재고관리자동화/placeorderAutomation/src/main/resources/templates/task-part-log.html
@@ -30,8 +30,62 @@
 
                 <!-- Page Heading -->
                 <div class="d-sm-flex align-items-center justify-content-between mb-4">
-                    <h1 class="h3 mb-0 text-gray-800">task part log</h1>
+                    <h1 class="h3 mb-0 text-gray-800">재고 내역</h1>
                 </div>
+
+                <div class="row justify-content-center mb-3">
+                    <div class="col-2">
+                        <select class="custom-select">
+                            <option selected>회사</option>
+                            <option value="1">One</option>
+                            <option value="2">Two</option>
+                            <option value="3">Three</option>
+                        </select>
+                    </div>
+                    <div class="col-2">
+                        <select class="custom-select">
+                            <option selected>공장</option>
+                            <option value="1">One</option>
+                            <option value="2">Two</option>
+                            <option value="3">Three</option>
+                        </select>
+                    </div>
+                    <div class="col-2 input-group">
+                        <input type="text" class="form-control" placeholder="YYYY-MM">
+                    </div>
+                    <div class="col-1">
+                        <button type="button" class="btn btn-primary btn-sm"><i class="fas fa-search"></i></button>
+                        <button type="button" class="btn btn-success btn-sm"><i class="far fa-file-excel"></i></button>
+                    </div>
+                </div>
+
+                <script>
+                    let companyCode;
+                    let yearMonth;
+
+                    function clickCompanyButton(input) {
+                        companyCode = input;
+                    }
+
+                    function clickYm(input) {
+                        yearMonth = input.replace("-", "");
+                        console.log(yearMonth);
+                    }
+
+                    function clickSendButton() {
+                        let xhr = new XMLHttpRequest();
+                        xhr.open("GET", "/api/task/part-status/" + companyCode + "/" + yearMonth);
+                        xhr.setRequestHeader('Content-type', 'application/x-www-form-urlencoded');
+                        xhr.onreadystatechange = function () {
+                            if (this.readyState === 4 && this.status === 200) {
+                                console.log(xhr.response);
+                            } else if (this.readyState === 4 && this.status === 400) {
+                            }
+
+                        }
+                        xhr.send();
+                    }
+                </script>
 
 
             </div>
