--- a/재고관리자동화/placeorderAutomation/src/main/resources/templates/fragments/header.html
+++ b/재고관리자동화/placeorderAutomation/src/main/resources/templates/fragments/header.html
@@ -22,5 +22,6 @@
     <script th:src="@{/vendor/jquery-easing/jquery.easing.min.js}"></script>
     <!-- Custom scripts for all pages-->
     <script th:src="@{/js/sb-admin-2.min.js}"></script>
+    <script th:src="@{/js/common.js}"></script>
 </head>
 </html>
